[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
ethabi = "18.0.0"
flate2 = "1.0.27"
merkle_tree = "0.1.0"
mithril-stm = "0.3.1"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
